# mytts

./: README.md  main.py  pyproject.toml  voices.json
core/: audio.py  dirs.py  parser.py  pdf.py  utils.py  video.py
inputs/: input.txt
mytts/: __init__.py  audio.py  parser.py  pdf.py  utils.py  video.py
mytts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
runs/run_20260407_214636/audio/: 0002.srt
runs/run_20260407_214636/temp/: concat.txt
runs/run_20260407_224849/temp/: concat.txt
runs/run_20260407_232815/audio/: 0001.srt
runs/run_20260407_232815/temp/: concat.txt
scripts/: main.py
