[project]
name = "mytts"
version = "0.1.0"
description = "TTS + video generation pipeline"
authors = [{name = "Luis Pinto"}]
dependencies = [
    "edge-tts",
    "pydub",
    "pdf2image"
]

[project.scripts]
mytts = "scripts.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
